Add work period payments.
